# continualkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-ready.yml  bug.yml  feature.yml
.github/workflows/: agent-dispatch.yml  auto-merge.yml  ci.yml
scripts/: check_diff_size.py  check_paths.py  llm_adapter.py  test_agent_local.py  validate_pr_template.py
src/continualkit/: __init__.py  cli.py
src/continualkit/compare/: __init__.py
src/continualkit/eval/: __init__.py
src/continualkit/replay/: __init__.py
src/continualkit/train/: __init__.py
tests/: test_import.py
tests/eval/: test_metrics.py
